tests/checker/bad/constraint_field_not_in_scope.scilla
scilla_version 0

library Constraint

contract Constraint()
with
  f
=>

field f : Bool = True